add get endpoints
